prevent logo text wrap

--- a/supercreative/static/login.css
+++ b/supercreative/static/login.css
@@ -28,6 +28,7 @@ body {
     color: #0e415f;
     margin-bottom: 90px;
     cursor: default;
+    white-space: nowrap;
 }
 
 form {
